--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,10 @@
-div {
-	color:red;
-	font-size: 100px;
+.logo {
+	width: 500px;
+	height: 500px;
+	background: url("../images/logo.png");
+}
+.orangebox {
+	width: 200px;
+	height: 100px;
+	background-color: orange;
 }
